Fix wrapping and width issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -72,5 +72,8 @@
   }
   body {
     @apply bg-background text-foreground;
+    pre {
+      white-space: pre-wrap;
+    }
   }
 }
